# open3d

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: test.vs  test_color.fs  test_color.vs
include/: config.h  imgui-style.h
src/: App.cpp  App.h  main.cpp  main2.cpp  mainx.cpp  pch.h
src/base/: GameWindow.cpp  GameWindow.h
src/render/: GLBufferManager.cpp  GLBufferManager.h  GLContext.cpp  GLContext.h  Mesh.h  RenderBase.h  UIContext.cpp  UIContext.h  VertexHolder.h
src/shader/: Shader.cpp  Shader.h
src/ui/: Component.h  HostView.cpp  HostView.h  InspectorPanel.cpp  InspectorPanel.h  SceneView.cpp  SceneView.h
src/window/: DXWindow.h  GLWindow.cpp  GLWindow.h  IWindow.h  WindowMgr.cpp  WindowMgr.h
